kubernetes/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mhawk
  labels:
    istio-injection: enabled
