kubernetes/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mhawk-service
  namespace: mhawk
  labels:
    app.kubernetes.io/name: name
    monitorWithPrometheus: "true"
spec:
  selector:
    app: mhawk
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
